# omaha

./: .pre-commit-config.yaml  Makefile  Pipfile  README.md  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
docs/: .buildinfo  conf.py  genindex.html  how_to_install.html  index.html  index.rst  objects.inv  omaha.html  omaha.rst  omaha.tests.html  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  how_to_install.doctree  index.doctree  omaha.doctree  omaha.tests.doctree
docs/_modules/: index.html
docs/_modules/omaha/: client.html  company.html  indicator.html  joinable.html  omaha.html
docs/_modules/omaha/tests/: joinable_test.html  test_client.html  test_company.html  test_indicator.html
docs/_sources/: how_to_install.rst.txt  index.rst.txt
omaha/: __init__.py  client.py  company.py  indicator.py  joinable.py  omaha.py
omaha/tests/: joinable_test.py  test_client.py  test_company.py  test_indicator.py
source/: conf.py  how_to_install.rst  index.rst  omaha.tests.rst
