[metadata]
name = omaha
version = attr: omaha.version.__version__
description = Buffett Code Adaptor for Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = finance, buffett-code
author = Kai Sasaki
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
  requests
  pandas
  cachetools
  quandl
