[metadata]
name = omaha
version = attr: omaha.version.__version__
license = Apache License, Version 2.0
description = Unified view of financial metrics of public companies
long_description = file: README.md
long_description_content_type = text/markdown
keywords = finance, buffett-code, quandl
author = Kai Sasaki
url = https://github.com/Lewuathe/omaha
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: Apache Software License
    Topic :: Office/Business :: Financial :: Investment

[options]
packages = find:
install_requires =
  requests
  pandas
  cachetools
  quandl
  inflection
